--- a/recipe_app_frontend/src/app/app.component.html
+++ b/recipe_app_frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="container">
-  <h1>{{ title }}</h1>
+<div class="page">
+  <app-navbar (search)="onSearch($event)"></app-navbar>
+  <main class="page-main container" role="main">
+    <router-outlet></router-outlet>
+  </main>
 </div>
